third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/inline-table/overwrite-08.stderr
TOML parse error at line 1, column 8
  |
1 | tab = { inner = { dog = "best" }, inner.cat = "worst" }
  |        ^
duplicate key `inner`
